# smart-coaster-fw

./: .gdbinit  .gitignore  .gitmodules  .licensure.yml  Cargo.toml  DESIGN_NOTES.md  README.md  TASK NOTES.md  build.rs  index.html  memory.x  memory_common.x
.cargo/: config.toml
.github/workflows/: build-web.yml  rust.yml
docs/: DESIGN_NOTES.md  MESSAGE_SPECS.md  TASK NOTES.md
firmware-loader-cli/: Cargo.toml
firmware-loader-cli/src/: cbor_messaging.rs  main.rs  util.rs
pkg/: package.json  smartcoaster_host_core.d.ts  smartcoaster_host_core.js  smartcoaster_host_core_bg.wasm  smartcoaster_host_core_bg.wasm.d.ts
smartcoaster-application/: Cargo.toml  build.rs  memory.x
smartcoaster-application/src/: main.rs
smartcoaster-application/src/application/: application_manager.rs  led_manager.rs  messaging.rs  weighing_manager.rs
smartcoaster-application/src/drink_monitor/: drink_monitoring.rs  messaging.rs  mod.rs
smartcoaster-application/src/hmi/: debouncer.rs  inputs.rs  mod.rs
smartcoaster-application/src/hmi/screens/monitoring/: mod.rs  monitoring_screen_1.rs  monitoring_screen_2.rs  monitoring_screen_debug.rs  top_status_bar.rs
smartcoaster-application/src/hmi/screens/settings_menu/: monitoring_options.rs
smartcoaster-application/src/hmi/screens/settings_screens/: set_number.rs  test_mode.rs
smartcoaster-application/src/led/: led_control.rs
smartcoaster-application/src/rtc/: mod.rs  signal.rs
smartcoaster-application/src/storage/: storage_manager.rs
smartcoaster-application/src/storage/historical/: accessor.rs  log_config.rs  mod.rs
smartcoaster-application/src/storage/settings/: monitor.rs
smartcoaster-bootloader/: Cargo.toml  build.rs  memory.x
smartcoaster-bootloader/src/: main.rs
smartcoaster-bootloader/src/usb/: cbor_send_receive.rs  firmware_downloader.rs  mod.rs
smartcoaster-host-core/: Cargo.toml
smartcoaster-host-core/src/: lib.rs  util.rs  wasm_bindings.rs
smartcoaster-messages/: Cargo.toml
smartcoaster-messages/src/: custom_data_types.rs  lib.rs
smartcoaster-messages/src/bootloader/: builder.rs  chunk.rs  mod.rs  ready_to_download.rs
smartcoaster-messages/src/general/: builder.rs  goodbye.rs  hello.rs  mod.rs
src/: debouncer.rs  led_control.rs  main.rs  rotary_encoder.rs
src/application/: application_manager.rs  application_state.rs  drink_monitoring.rs  led_manager.rs  messaging.rs  mod.rs  weighing_manager.rs
src/application/storage/: mod.rs  settings.rs
src/application/storage/settings/: accessor.rs  mod.rs  option_types.rs  settings_store.rs
src/drink_monitor/: drink_monitoring.rs  log_data.rs  messaging.rs  mod.rs
src/hmi/: debouncer.rs  display.rs  event_channels.rs  inputs.rs  messaging.rs  mod.rs  rotary_encoder.rs
src/hmi/screens/: calibration.rs  heap_status.rs  mod.rs  monitoring.rs  set_date_time.rs  set_led_brightness.rs  settings.rs  test_mode.rs
src/hmi/screens/menu/: mod.rs
src/hmi/screens/menu/items/: backitem.rs  checkbox.rs  mod.rs  multi_option.rs  section.rs  submenu.rs
src/hmi/screens/monitoring/: mod.rs  monitoring_screen_1.rs  monitoring_screen_2.rs  monitoring_screen_3.rs  monitoring_screen_4.rs  monitoring_screen_debug.rs  top_status_bar.rs
src/hmi/screens/settings/: display_brightness_options.rs  led_brightness_options.rs  mod.rs
src/hmi/screens/settings_menu/: display_options.rs  led_brightness_options.rs  mod.rs  monitoring_options.rs
src/hmi/screens/settings_screens/: about.rs  calibration.rs  confirmation.rs  heap_status.rs  mod.rs  set_date_time.rs  set_number.rs  set_time.rs  test_mode.rs
src/led/: led_control.rs  mod.rs
src/rtc/: accessor.rs  mod.rs  signal.rs
src/storage/: mod.rs  storage_manager.rs
src/storage/historical/: accessor.rs  manager.rs  messaging.rs  mod.rs
src/storage/settings/: accessor.rs  messaging.rs  mod.rs  monitor.rs  settings_store.rs
src/weight/: event_channels.rs  messaging.rs  mod.rs  weight.rs
src/weight/interface/: hx711async.rs  mod.rs
web-interface/: index.html
xtask/src/: main.rs
