[package]
edition = "2021"
name = "smartcoaster"
version = "0.1.0"
resolver = "2"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }


embedded-hal = "1.0"
embedded-hal-async = "1.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"
cortex-m = { version = "0.7.6" }
assign-resources = "0.4.1"

embassy-executor = { version = "0.7", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-rp = { version = "0.3.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-futures = "0.1.1"
embassy-embedded-hal = "0.3"



#embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "2ba7fafa", features = ["task-arena-size-16384", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
#embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", rev = "2ba7fafa", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
#embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "2ba7fafa" }
#embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "2ba7fafa", features = ["defmt", "defmt-timestamp-uptime"] }
#embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "2ba7fafa" }
#embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git", rev = "2ba7fafa" }

embedded-graphics = "0.8.1"
sh1106 = "0.5.0"
heapless = "0.8.0"
smart-leds = "0.4.0"
portable-atomic = { version = "1.8.0", features = ["critical-section"] }
static_cell = "2.1.0"
micromath = { version = "2.1.0", features = ["statistics", "vector"] }
embedded-alloc = "0.6.0"
embedded-layout = "0.4.1"
simple-embedded-graphics-menu = { git = "https://github.com/paulhampson/simple-embedded-graphics-menu.git" }
sequential-storage = { version = "4.0.1", features = ["defmt-03"] }
embedded-storage-async = "0.4.1"
enum-map = "2.7.3"
strum = { version = "0.26.3", default-features = false, features = ["derive"] }
ds323x = "0.6.0"

[profile.release]
debug = 2
lto = 'fat' # for call stack analysis support

[build]
rustflags = ["-Z emit-stack-sizes"]

[features]
default = ["pcb_rev1"]
pcb_rev1 = []
flat_board = []
