[workspace]
members = ["firmware-loader-cli", "smartcoaster-application", "smartcoaster-bootloader", "smartcoaster-messages", "xtask"]
resolver = "2"

[profile.release]
debug = 2
opt-level = 's'
lto = 'fat' # for call stack analysis support

# Default profile for build/run commands
[profile.dev]
debug = 2
opt-level = 's'
lto = 'fat' # for call stack analysis support
