[package]
name = "smartcoaster-bootloader"
version = "0.1.1"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embassy-rp = { version = "0.8.0", features = ["rp2040"] }
embassy-boot-rp = { version = "0.8.0" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0", features = [] }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
cfg-if = "1.0.0"

[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
]



[package.metadata.embassy]
build = [
    { target = "thumbv6m-none-eabi" }
]