[package]
name = "smartcoaster-bootloader"
version = "0.2.0"
edition = "2024"

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

embassy-rp = { version = "0.8.0", features = ["rp2040", "time-driver"] }
embassy-boot-rp = { version = "0.8.0" }
embassy-sync = { version = "0.7.2" }
embassy-time = { version = "0.5.0", features = [] }
embassy-usb = { version = "0.5.1" }

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
embedded-storage = "0.3.1"
embedded-storage-async = "0.4.0"
cfg-if = "1.0.0"
embassy-futures = "0.1.2"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }

minicbor = { version = "2.1", default-features = false }

ascon-hash = { version = "0.3.1", default-features = false }
smartcoaster-messages = { path = "../smartcoaster-messages", version = "0.1.0" }
embedded-io-async = "0.6.1"


[features]
default = ["defmt"]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot-rp/defmt",
    "embassy-rp/defmt",
    "embassy-usb/defmt",
    "embassy-executor/defmt"
]



[package.metadata.embassy]
build = [
    { target = "thumbv6m-none-eabi" }
]